tests/miniJava/neg/004469_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] java ( extends java ) { return 0 ; } }
